# assignment1

./: CYK.txt  README.md  build.xml  compile_linux.txt  debinarize.txt  debinarize.txt~  recursie.txt
Project1N/: CYKParser.cpp  CYKParser.cpp~  CYKParser.h  CYKParser.h~  Grammar.cpp  Grammar.h  Main.cpp  Main.cpp~  TreeManager.cpp  example.dat_archive.xml  project1
Project1N/buildtest/: CMakeCache.txt  Makefile  project1n-1.0.1-Linux.sh
Project1N/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  (+6 more)
Project1N_1_2/: CYKParser.cpp  CYKParser.cpp~  CYKParser.h  CYKParser.h~  Grammar.cpp  Grammar.cpp~  Grammar.h  Main.cpp  Parser.cpp  Parser.h  Project1N_1_2.rar  README.txt  SentenceParser.cpp  SentenceParser.h  TreeManager.cpp  TreeManager.cpp~  TreeManager.h  TreeManager.h~  blaa.evalC  example.dat_archive.xml  example.dat_archive_treebank.xml  example2.dat_archive.xml  project1  result_nosmoothing.evalC  result_smoothing.evalC  testsentences.dat_result  testsentences.datnew  testsentences2.datnew  testsentencespart.datnew  testsentencesparttrees.datnew  testsentencestrees_nosmoothing.datnew  testtreespart.datnew  toptest.txt
Project1N_1_P/: CMakeLists.txt  CYKParser.cpp  Main.cpp  TreeManager.h
Project1N_1_P/buildtest/: CPackSourceConfig.cmake
Project1N_1_P/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
report/: ReportELPL.aux  ReportELPL.bbl  ReportELPL.tex  ReportELPL2.aux  ReportELPL2.bbl  ReportELPL2.blg  ReportELPL2.tex  example.tex  references.bib
(+13 files in other folders)
